# node2vec-report

./: .gitattributes  PPI-dataset.ipynb  README.md  cora-experiments-walk-number.csv  cora-experiments-walk-number.pkl  cora-experiments-walk-number.xlsx  cora_dataset.ipynb  cora_node2vec.ipynb  debug_dataload.ipynb  plot_performance.m  ppi-results-32.csv  ppi-results-32.xlsx  ppi-results.pkl  ppi-results.xlsx  pq_variations.pkl copy  pq_variations.xlsx  project.ipynb  pvals_plot.m  pyproject.toml  qvals_plot.m  run_pq_variations.py  run_pq_variations_keras.ipynb  run_pq_variations_keras.py  testing.ipynb  walk_length_plot.m  walk_number_plot.m
data/: cora.ipynb  plot_performance.m
report/: glossary.tex  report.ist  report.tex  titlepage.tex
results/: cora-experiments-pvals-l9-n60.csv  cora-experiments-pvals-l9-n60.pkl  cora-experiments-pvals-l9-n60.xlsx  cora-experiments-qpvals-l9-n60.csv  cora-experiments-qpvals-l9-n60.pkl  cora-experiments-qpvals-l9-n60.xlsx  cora-experiments-qvals-l9-n60.csv  cora-experiments-qvals-l9-n60.pkl  cora-experiments-qvals-l9-n60.xlsx  cora-experiments-walk-length.csv  cora-experiments-walk-length.pkl  cora-experiments-walk-length.xlsx  cora-experiments-walk-number.csv  cora-experiments-walk-number.pkl  cora-experiments-walk-number.tex  cora-experiments-walk-number.xlsx  cora-experiments.csv  cora-experiments.pkl  cora-experiments.tex  cora-experiments.xlsx  cora-results-n20-l3.csv  cora-results-n20-l3.pkl  cora-results-n20-l3.tex  cora-results-n20-l3.xlsx  ppi-results.tex  pq_variations_cli.pkl  pq_variations_cli.xlsx  pvals_plot.asv  (+1 more)
