[tool.poetry]
name = "graph-classification-experiments"
version = "0.1.0"
description = "Experiments to explore how to classify graphs"
authors = ["James Cauwelier <james@daedalus.voyage>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
