[tool.poetry]
name = "graph-classification-experiments"
version = "0.1.0"
description = "Experiments to explore how to classify graphs"
authors = ["James Cauwelier <james@daedalus.voyage>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.0"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
igraph = "^0.9.10"
scipy = "^1.8.0"
pandas = "^1.4.2"
cairocffi = "^1.3.0"
stellargraph = "^1.2.1"
chardet = "^4.0.0"
openpyxl = "^3.0.9"
torch = "^1.11.0"
spektral = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
